remove explict height on app container

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </style>
   </head>
   <body>
-    <div id="hw-excel-upload" style="width: 40%; height: 400px"></div>
+    <div id="hw-excel-upload" style="width: 40%;"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
