--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
         color: #333333;
         background-color: #f1f2f2;
       }
+      :root, body {
+        margin: 0;
+        padding: 0;
+      }
+      body {
+        height: 100vh;
+      }
     </style>
   </head>
   <body>
