add HW color definitions as CSS variables

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         -moz-osx-font-smoothing: grayscale;
         color: #333333;
         background-color: #f1f2f2;
+
+        --color-primary: 128, 188, 0;
+        --color-secondary: 16, 24, 32;
       }
       :root, body {
         margin: 0;
