remove inline styles and add explict ID to app root div

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </style>
   </head>
   <body>
-    <div id="hw-excel-upload" style="width: 40%;"></div>
+    <div id="hw-item-number-upload"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
